# wgpu_app_framework

./: .gitignore  Cargo.toml  README.md  STARTUP_RENDER_FLOW.txt  new.txt
docs/: command_module_organization.md  master_design.md  roadmap.md  ui_command_architecture.md
docs/audits/: 2026-07-11-constitutional-examen.md  2026-07-11-table-polish-campaign.md  2026-07-12-five-truths-campaign.md  2026-07-12-one-selectable-truth.md  2026-07-12-one-text-truth-triage.md  2026-07-12-practiced-constitution.md  2026-07-12-tables-campaign.md  2026-07-12-widget-grammar.md  2026-07-13-composed-context-world.md  2026-07-13-context-menu-campaign.md  2026-07-13-conventional-command-topology-investigation-fable.md  2026-07-13-conventional-command-topology-investigation.md  2026-07-13-crate-seams-investigation.md  2026-07-13-current-context-campaign.md  2026-07-13-dips-and-receipts.md  2026-07-13-feedback-campaign.md  2026-07-13-first-frame-last-frame-campaign.md  2026-07-13-input-validity-status-projection-audit.md  2026-07-13-material-regions-campaign.md  2026-07-13-material-regions-investigation-fable.md  2026-07-13-menus-from-meaning-campaign.md  2026-07-13-one-resolved-press-campaign.md  2026-07-13-one-way-internals.md  2026-07-13-presentation-clock-campaign.md  2026-07-13-renderer-economics-campaign.md  2026-07-13-show-cycle-contract.md  2026-07-13-table-grammar-campaign.md  2026-07-14-retained-renderer-campaign.md  2026-07-15-scroll-truth-correction.md  2026-07-16-payload-neutral-scroll-architecture-campaign.md  2026-07-16-scroll-source-census.md  2026-07-16-scroll-unification-campaign.md  2026-07-17-presentation-compiler-campaign.md  2026-07-17-presentation-compiler-source-census.md  2026-07-17-scrolling-engine-campaign.md  2026-07-17-scrolling-engine-source-census.md
examples/control_gallery/: main.rs
examples/glass_tuner/: main.rs
examples/material_shadow_probe/: main.rs
examples/native_alpha_probe/: main.rs
examples/scratch_text_editor/: main.rs
examples/text_editor/: main.rs
examples/wgpu_app/: main.rs
src/: action.rs  animation.rs  app.rs  color.rs  error.rs  event.rs  feedback.rs  icon.rs  ime.rs  input.rs  keymap.rs  layout.rs  lib.rs  list.rs  menu.rs  overlay.rs  persistent.rs  pointer.rs  popup.rs  scratch.rs  scroll.rs  selection.rs  subject.rs  table.rs  task.rs  text.rs  text_backend.rs  text_system.rs  theme.rs  ui.rs  virtual_list.rs  window.rs
src/action/: binding.rs  context.rs  definition.rs  id.rs  mod.rs  payload.rs  registry.rs  shortcut.rs  state.rs  tests.rs
src/app/: action_executor.rs  clipboard.rs  command.rs  context.rs  drag_drop.rs  floating.rs  focus.rs  frame.rs  input.rs  key_repeat.rs  mailbox.rs  menu_ui.rs  mod.rs  paint_cache.rs  rendering.rs  runtime.rs  scroll.rs  sender.rs  state.rs  task_runner.rs  text.rs  text_input.rs  view.rs  windows.rs
src/clipboard/: error.rs  mod.rs  (+3 more)
tools/: check_renderer_receipts.py  generate_scroll_pairwise_manifest.py  one_way_census.py  one_way_slots.json  test_one_way_census.py  test_renderer_receipts.py  test_scroll_pairwise_manifest.py
(+787 files in other folders)
