[package]
name = "wgpu_l3"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
bytemuck = "1.25.0"
# Enables shape-run-cache for glyphon's transitive cosmic-text dependency.
cosmic-text = { version = "0.18.2", features = ["shape-run-cache"] }
env_logger = "0.11.10"
glyphon = "0.11.0"
log = "0.4.32"
lru = "0.16.4"
memmap2 = "0.9.10"
pollster = "0.4.0"
rfd = "0.17.2"
thiserror = "2.0.18"
unicode-bidi = "0.3.18"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.13.3"
wgpu = "29.0.3"
winit = "0.30.13"
iconflow = { version = "1.0.0", features = ["pack-phosphor"] }
